Site reupload (v1 with only our stories)

--- a/index.html
+++ b/index.html
@@ -8,3 +8,5 @@ title: Home
 <p>We are a first-year-research History class at Indiana University Bloomington looking to preserve sentimental and practical artifacts of importance to the IU student body.
 
 <p>We're doing that by conducting a History Harvest, which means if you have something that's important to you, we can digitize it, do a really short interview with you about it, and add it to the IU archives without you having to leave the object with us forever.
+
+<p><strong><a href="stories">Read Our Stories</a></strong>
