--- a/index.html
+++ b/index.html
@@ -3,10 +3,10 @@ layout: default
 title: Home
 ---
 
-<h3>Background</h3>
+<h3>The History of this History Harvest</h3>
 
-<p>We are a first-year-research History class at Indiana University Bloomington looking to preserve sentimental and practical artifacts of importance to the IU student body.
+<p>In fall of 2018, Indiana University's College of Arts and Sciences welcomed the inaugural Arts and Sciences Undergraduate Research Experience class. As part of that ASURE program, our Spring 2019 HIST-A200 Digital Public History course took on a History Harvest. This type of community-history project, first pioneered at the University of Nebraska-Lincoln, gets undergraduates involved in the digitization and preservation of sentimental artifacts that aren't likely to make it into museums or archives.
 
-<p>We're doing that by conducting a History Harvest, which means if you have something that's important to you, we can digitize it, do a really short interview with you about it, and add it to the IU archives without you having to leave the object with us forever.
+<p>To kick-start that process, each person in ourclass started the semester with an object of importance to us. We then invited our fellow students to  identify something significant in their every day life and then we offered to digitize it, do a really short interview with you about it, and add it to the IU archives without you having to leave the object with us forever.
 
 <p><strong><a href="stories">Read Our Stories</a></strong>
