--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@ title: Home
 
 <h3>The History of this History Harvest</h3>
 
-<p>In fall of 2018, Indiana University's College of Arts and Sciences welcomed the inaugural Arts and Sciences Undergraduate Research Experience class. As part of that ASURE program, our Spring 2019 HIST-A200 Digital Public History course took on a History Harvest. This type of community-history project, which had its first iteration in the [History Department at the University of Nebraska-Lincoln](https://historyharvest.unl.edu/), gets undergraduates involved in the digitization and preservation of sentimental artifacts that aren't likely to make it into museums or archives.
+<p>In fall of 2018, Indiana University's College of Arts and Sciences welcomed the inaugural Arts and Sciences Undergraduate Research Experience class. As part of that ASURE program, our Spring 2019 HIST-A200 Digital Public History course took on a History Harvest. This type of community-history project, which had its first iteration in the <a href="https://historyharvest.unl.edu/">History Department at the University of Nebraska-Lincoln</a>, gets the public involved in the digitization and preservation of sentimental artifacts that aren't likely to make it into museums or archives.
 
 <p>To kick-start that process, each person in our class started the semester with an object of importance to us. We then invited our fellow students to  identify something significant in their every day life and then we offered to digitize it, do a really short interview about it, and add it to this digital exhibit so that the object could go home with its person but its information would be preserved here with other objects that have made their way into IUB's history.
 
